--- a/index.html
+++ b/index.html
@@ -65,12 +65,6 @@
                 </div>
                 <div class="hero-image">
                     <div class="image-container">
-                        <div class="floating-elements">
-                            <div class="floating-icon"><i class="fab fa-html5"></i></div>
-                            <div class="floating-icon"><i class="fab fa-css3-alt"></i></div>
-                            <div class="floating-icon"><i class="fab fa-js-square"></i></div>
-                            <div class="floating-icon"><i class="fab fa-python"></i></div>
-                        </div>
                         <!-- Replace with your photo -->
                         <div class="profile-photo">
                             <img src="Rilwankhan .png" alt="Your Photo">
@@ -84,10 +78,10 @@
     <!-- Certificates Section -->
     <section id="certificates" class="certificates">
         <div class="container">
-            <h2 class="section-title">Certificates & Achievements</h2>
-            <p class="section-subtitle">Showcasing my continuous learning journey and professional growth</p>
+            <h2 class="section-title scroll-animate" data-animation="fadeInUp">Certificates & Achievements</h2>
+            <p class="section-subtitle scroll-animate" data-animation="fadeInUp" data-delay="200">Showcasing my continuous learning journey and professional growth</p>
             <div class="certificates-grid">
-                <div class="certificate-card" onclick="openCertificate('web-dev')">
+                <div class="certificate-card scroll-animate" data-animation="fadeInUp" data-delay="100" onclick="openCertificate('web-dev')">
                     <div class="certificate-icon">
                         <i class="fas fa-code"></i>
                     </div>
@@ -96,7 +90,7 @@
                     <span class="certificate-date">2025</span>
                     <div class="view-certificate">Click to view certificate</div>
                 </div>
-                <div class="certificate-card" onclick="openCertificate('ui-ux')">
+                <div class="certificate-card scroll-animate" data-animation="fadeInUp" data-delay="200" onclick="openCertificate('ui-ux')">
                     <div class="certificate-icon">
                         <i class="fas fa-palette"></i>
                     </div>
@@ -105,7 +99,7 @@
                     <span class="certificate-date">2025</span>
                     <div class="view-certificate">Click to view certificate</div>
                 </div>
-                <div class="certificate-card" onclick="openCertificate('python')">
+                <div class="certificate-card scroll-animate" data-animation="fadeInUp" data-delay="300" onclick="openCertificate('python')">
                     <div class="certificate-icon">
                         <i class="fab fa-python"></i>
                     </div>
@@ -114,7 +108,7 @@
                     <span class="certificate-date">2025</span>
                     <div class="view-certificate">Click to view certificate</div>
                 </div>
-                <div class="certificate-card" onclick="openCertificate('java')">
+                <div class="certificate-card scroll-animate" data-animation="fadeInUp" data-delay="400" onclick="openCertificate('java')">
                     <div class="certificate-icon">
                         <i class="fab fa-java"></i>
                     </div>
@@ -123,7 +117,7 @@
                     <span class="certificate-date">2025</span>
                     <div class="view-certificate">Click to view certificate</div>
                 </div>
-                <div class="certificate-card" onclick="openCertificate('hackathon')">
+                <div class="certificate-card scroll-animate" data-animation="fadeInUp" data-delay="500" onclick="openCertificate('hackathon')">
                     <div class="certificate-icon">
                         <i class="fas fa-trophy"></i>
                     </div>
@@ -161,23 +155,23 @@
                     </div>
                     <div class="social-links">
                         <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-github"></i></a>
+                        <a href="https://github.com/Rilwankhan" class="social-link"><i class="fab fa-github"></i></a>
                         <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/kd_paiyan_rilwan_07?igsh=MTIyZXZsNnIzZ3JoZA==" class="social-link"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
-                <form class="contact-form">
+                <form class="contact-form" action="https://formspree.io/f/myzraeew" method="POST">
                     <div class="form-group">
-                        <input type="text" placeholder="Your Name" required>
+                        <input type="text" name="name" placeholder="Your Name" required>
                     </div>
                     <div class="form-group">
-                        <input type="email" placeholder="Your Email" required>
+                        <input type="email" name="email" placeholder="Your Email" required>
                     </div>
                     <div class="form-group">
-                        <input type="text" placeholder="Subject" required>
+                        <input type="text" name="subject" placeholder="Subject" required>
                     </div>
                     <div class="form-group">
-                        <textarea placeholder="Your Message" rows="5" required></textarea>
+                        <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
                     </div>
                     <button type="submit" class="btn btn-primary">Send Message</button>
                 </form>
@@ -205,3 +199,27 @@
     <script src="script.js"></script>
 </body>
 </html>
+    <script>
+        // Scroll Animation Observer
+        const observerOptions = {
+            threshold: 0.1,
+            rootMargin: '0px 0px -50px 0px'
+        };
+
+        const observer = new IntersectionObserver((entries) => {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) {
+                    const delay = entry.target.dataset.delay || 0;
+                    setTimeout(() => {
+                        entry.target.classList.add('animate');
+                    }, delay);
+                }
+            });
+        }, observerOptions);
+
+        // Observe all scroll-animate elements
+        document.addEventListener('DOMContentLoaded', () => {
+            const animateElements = document.querySelectorAll('.scroll-animate');
+            animateElements.forEach(el => observer.observe(el));
+        });
+    </script>
